--- a/reveal/index.html
+++ b/reveal/index.html
@@ -44,7 +44,7 @@
 ### 虎科大機械設計工程系
 
 <small>
-Created by [KMOLab](http://lab.kmol.info/)
+Created by [40623150仝允丞]
 </small>
 
 [2018 Fall 分組網誌](./../blog/index.html)
