--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -21,7 +21,7 @@
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/T3ipO2KDy5s" width="560"></iframe></p>
 <h2>Week2</h2>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/9255LKrhQNo" width="560"></iframe></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/I8crlZZfSww" width="560"></iframe></p>
+<iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/I8crlZZfSww" width="560"></iframe>
 <h2>Week3</h2>
 <p></p>
 <h2>Week4</h2>
