--- a/reveal/index.html
+++ b/reveal/index.html
@@ -41,7 +41,7 @@
     <script type="text/template">
 ## 2018Fall 分組網際簡報
 
-### 虎科大機械設計工程系
+### 虎科大機械設計工程系MDE
 
 <small>
 Created by [40623150仝允丞]
@@ -55,6 +55,22 @@ Created by [40623150仝允丞]
 
 
 						
+<section>
+<section data-markdown>
+    <script type="text/template">
+<!-- 請注意, @others 不可以內縮 -->
+# Week 1上課內容
+
+* 準備隨身碟、耳機、筆記本
+* 建立個人的課程網頁 40623111.github.io
+* 登入Github帳號領取個人期中作業
+* 編輯 reveal.leo 簡報內容
+* 建立 pelican.leo 網誌
+* 將P37置入隨身碟
+    </script>
+</section>
+
+</section>
 <section data-markdown>
     <script type="text/template">
 # 投影片快捷鍵
