--- a/reveal/index.html
+++ b/reveal/index.html
@@ -70,6 +70,19 @@ Created by [40623150仝允丞]
     </script>
 </section>
 
+<section data-markdown>
+    <script type="text/template">
+<!-- 請注意, @others 不可以內縮 -->
+* Homework:
+
+[Week1 Homework-1](https://www.youtube.com/watch?v=jTNyVUuFsPo)
+
+
+[Week1 Homework-2](https://www.youtube.com/watch?v=T3ipO2KDy5s)
+
+    </script>
+</section>
+
 </section>
 <section data-markdown>
     <script type="text/template">
