--- a/reveal/index.html
+++ b/reveal/index.html
@@ -72,17 +72,31 @@ Created by [40623150仝允丞]
 
 <section data-markdown>
     <script type="text/template">
-<!-- 請注意, @others 不可以內縮 -->
-* Homework:
+* Homework-1
 
-[Week1 Homework-1](https://www.youtube.com/watch?v=jTNyVUuFsPo)
+<iframe width="910" height="444" src="https://www.youtube.com/embed/jTNyVUuFsPo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
+* Homework-2
 
-[Week1 Homework-2](https://www.youtube.com/watch?v=T3ipO2KDy5s)
+<iframe width="910" height="444" src="https://www.youtube.com/embed/T3ipO2KDy5s" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
     </script>
 </section>
 
+
+						
+<section data-markdown>
+    <script type="text/template">
+## 使用 iframe 導入影片
+
+### 導入影片 template
+
+<iframe width="910" height="444" src="https://www.youtube.com/embed/jTNyVUuFsPo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </script>
+</section>
+
+
+						
 </section>
 <section data-markdown>
     <script type="text/template">
