--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -21,15 +21,17 @@
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/T3ipO2KDy5s" width="560"></iframe></p>
 <h2>Week2</h2>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/9255LKrhQNo" width="560"></iframe></p>
-<iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/I8crlZZfSww" width="560"></iframe>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/I8crlZZfSww" width="560"></iframe></p>
 <h2>Week3</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/PoQn95ZObPA" width="560"></iframe><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/2yW7lgSZpws" width="560"></iframe>Week4</p>
 <p></p>
-<h2>Week4</h2>
 <h2>Week5</h2>
+<p></p>
 <h2>Week6</h2>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/PoQn95ZObPA" width="560"></iframe></p>
+<p></p>
 <h2>Week7</h2>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/2yW7lgSZpws" width="560"></iframe></p>
+<p></p>
+<h2>Week8</h2>
 <h1>Python 手冊</h1>
 <p>計算機程式教材:  <a href="http://mde.tw/cp2018/content/">http://mde.tw/cp2018/content/</a> </p>
 <p>可攜程式下載: <a href="https://drive.google.com/file/d/1DWtyoUhl8CycKJ8uulB3viRXE39KqpE1/view?usp=sharing">p37.7z</a></p>
