--- a/reveal/index.html
+++ b/reveal/index.html
@@ -97,6 +97,14 @@ Created by [40623150仝允丞]
 <section data-markdown>
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
+# Week 2上課內容
+
+* 編輯 reveal.leo 簡報內容
+
+* 編輯 pelican.leo 網誌
+
+* 申請 onshape 帳號
+
     </script>
 </section>
 
@@ -105,7 +113,7 @@ Created by [40623150仝允丞]
     <script type="text/template">
 * Homework-1
 
-<iframe width="1280" height="693" src="https://www.youtube.com/embed/9255LKrhQNo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<iframe width="910" height="444" src="https://www.youtube.com/embed/9255LKrhQNo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
     </script>
 </section>
@@ -116,7 +124,7 @@ Created by [40623150仝允丞]
     <script type="text/template">
 * Homework-2
 
-<iframe width="1280" height="693" src="https://www.youtube.com/embed/I8crlZZfSww" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<iframe width="910" height="444" src="https://www.youtube.com/embed/I8crlZZfSww" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
     </script>
 </section>
