--- a/reveal/index.html
+++ b/reveal/index.html
@@ -132,6 +132,37 @@ Created by [40623150仝允丞]
 
 						
 </section>
+<section>
+<section data-markdown>
+    <script type="text/template">
+<!-- 請注意, @others 不可以內縮 -->
+# 學習如何使用onshape
+
+* 選擇平面按下Sketch新建草稿
+
+* 畫好草圖之後,選擇草圖面,Extrude擠出
+
+* 除料按Symmetric
+
+* 若要雙向擠出(除料)按Symmetric
+
+    </script>
+</section>
+
+
+</section>
+<section>
+<section data-markdown>
+    <script type="text/template">
+<!-- 請注意, @others 不可以內縮 -->
+    </script>
+</section>
+
+</section>
+<section>
+</section>
+<section>
+</section>
 <section data-markdown>
     <script type="text/template">
 # 投影片快捷鍵
