--- a/reveal/index.html
+++ b/reveal/index.html
@@ -97,7 +97,7 @@ Created by [40623150仝允丞]
 <section data-markdown>
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
-# Week 2上課內容
+## Week 2上課內容
 
 * 編輯 reveal.leo 簡報內容
 
@@ -136,7 +136,9 @@ Created by [40623150仝允丞]
 <section data-markdown>
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
-# 學習如何使用onshape
+## Week 3上課內容
+
+### 學習如何使用onshape
 
 * 選擇平面按下Sketch新建草稿
 
@@ -155,6 +157,30 @@ Created by [40623150仝允丞]
 <section data-markdown>
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
+##Week4上課內容
+
+### 學習onshape基本用法
+
+* thicken 加厚
+
+* revolve 旋轉
+
+* split 切割
+
+* shell 薄殼
+
+* sweep 掃掠
+
+* loft 斷面混成
+
+* Linear pattern 矩形陣列
+
+* Circular pattern 環形陣列
+
+* Fillet 導圓角
+
+* Chamfer 導角
+
     </script>
 </section>
 
