--- a/reveal/index.html
+++ b/reveal/index.html
@@ -161,25 +161,23 @@ Created by [40623150仝允丞]
 
 ### 學習onshape基本用法
 
-* thicken 加厚
+* thicken 加厚     * loft 斷面混成
 
-* revolve 旋轉
+* revolve 旋轉    * Linear pattern 矩形陣列
 
-* split 切割
+* split 切割         * Circular pattern 環形陣列
 
-* shell 薄殼
+* shell 薄殼      * Fillet 導圓角
 
-* sweep 掃掠
+* sweep 掃掠      * Chamfer 導角
 
-* loft 斷面混成
 
-* Linear pattern 矩形陣列
 
-* Circular pattern 環形陣列
 
-* Fillet 導圓角
 
-* Chamfer 導角
+
+
+
 
     </script>
 </section>
