--- a/reveal/index.html
+++ b/reveal/index.html
@@ -161,15 +161,15 @@ Created by [40623150仝允丞]
 
 ### 學習onshape基本用法
 
-* thicken 加厚     * loft 斷面混成
+* thicken 加厚    loft 斷面混成
 
-* revolve 旋轉    * Linear pattern 矩形陣列
+* revolve 旋轉    Linear pattern 矩形陣列
 
-* split 切割         * Circular pattern 環形陣列
+* split 切割  Circular pattern 環形陣列
 
-* shell 薄殼      * Fillet 導圓角
+* shell 薄殼  Fillet 導圓角
 
-* sweep 掃掠      * Chamfer 導角
+* sweep 掃掠  Chamfer 導角
 
 
 
@@ -184,6 +184,21 @@ Created by [40623150仝允丞]
 
 </section>
 <section>
+<section data-markdown>
+    <script type="text/template">
+<!-- 請注意, @others 不可以內縮 -->
+### W5功課繪製
+
+*在前視圖建立一草圖
+* 繪製一個直徑0.875的圓,再做對稱擠出0.75in
+* 前視圖畫一個直徑0.23的圓,對稱擠出1in
+* 右側視圖繪製一直徑0.23的圓
+* 將其移除並選擇完全貫通
+* 完成
+
+    </script>
+</section>
+
 </section>
 <section>
 </section>
