--- a/reveal/index.html
+++ b/reveal/index.html
@@ -59,14 +59,18 @@ Created by [40623150仝允丞]
 <section data-markdown>
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
-# Week 1上課內容
-
 * 準備隨身碟、耳機、筆記本
+
 * 建立個人的課程網頁 40623111.github.io
+
 * 登入Github帳號領取個人期中作業
+
 * 編輯 reveal.leo 簡報內容
+
 * 建立 pelican.leo 網誌
+
 * 將P37置入隨身碟
+
     </script>
 </section>
 
@@ -75,8 +79,6 @@ Created by [40623150仝允丞]
 <section data-markdown>
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
-## Week 2上課內容
-
 * 編輯 reveal.leo 簡報內容
 
 * 編輯 pelican.leo 網誌
@@ -92,8 +94,6 @@ Created by [40623150仝允丞]
 <section data-markdown>
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
-## Week 3上課內容
-
 ### 學習如何使用onshape
 
 * 選擇平面按下Sketch新建草稿
@@ -113,8 +113,6 @@ Created by [40623150仝允丞]
 <section data-markdown>
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
-##Week4上課內容
-
 ### 學習onshape基本用法
 
 * thicken 加厚    loft 斷面混成
@@ -145,7 +143,7 @@ Created by [40623150仝允丞]
 <!-- 請注意, @others 不可以內縮 -->
 ### W5功課繪製
 
-*在前視圖建立一草圖
+* 在前視圖建立一草圖
 * 繪製一個直徑0.875的圓,再做對稱擠出0.75in
 * 前視圖畫一個直徑0.23的圓,對稱擠出1in
 * 右側視圖繪製一直徑0.23的圓
@@ -160,13 +158,58 @@ Created by [40623150仝允丞]
 <section data-markdown>
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
-##Week6上課內容
+### 學習如何繪製時鐘
 
-<iframe width="910" height="700" src="https://www.youtube.com/embed/0SKgCf2zJV8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+* 繪製草圖,再做旋轉
+
+* 外圈倒圓角
+
+* 做時鐘的底面
+
+* 使用文字(text),繪製時鐘的數字
+
+* 指針部分繪製:使用平面指令,建立工作平面,再繪製草圖並擠出
+
+* 繪製轉軸:先畫好需要的草圖,再做斷面混成並用消除圓柱外多餘的材料
+
+* 繪製指針的刻度,並做環形陣列
 
     </script>
 </section>
 
+</section>
+<section>
+<section data-markdown>
+    <script type="text/template">
+<!-- 請注意, @others 不可以內縮 -->
+### 動態網頁出現問題時處理方法
+
+* 使用 CMSimfly 過程, 碰到無法正確解讀 config/content.htm 時, 可更新程式碼或回報問題的流程
+
+* 1.更新程式碼:
+
+* 從 https://localhost8443 啟動動態網頁
+
+* 動態資料放在config/content.htm
+
+* 動態網頁出問題時可能是系統無法處理,要解決版本的問題
+
+    </script>
+</section>
+<section data-markdown>
+    <script type="text/template">
+<!-- 請注意, @others 不可以內縮 -->
+* 舊的程式沒辦法用圖片當作標題,程式升級後就不會產生錯誤
+
+* 升級flaskapp.py試著用同樣程式處理
+
+* 升級時記得content.htm要停留在某一個版本
+
+* 2.回報問題:
+
+* 如果還是無法處理問題,從課程issues回報問題
+    </script>
+</section>
 </section>
 <section data-markdown>
     <script type="text/template">
