--- a/reveal/index.html
+++ b/reveal/index.html
@@ -141,7 +141,7 @@ Created by [40623150仝允丞]
 <section data-markdown>
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
-### W5功課繪製
+### 功課繪製
 
 * 在前視圖建立一草圖
 * 繪製一個直徑0.875的圓,再做對稱擠出0.75in
