--- a/reveal/index.html
+++ b/reveal/index.html
@@ -59,9 +59,10 @@ Created by [40623150仝允丞]
 <section data-markdown>
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
+## 課前準備
 * 準備隨身碟、耳機、筆記本
 
-* 建立個人的課程網頁 40623111.github.io
+* 建立個人的課程網頁 40623150.github.io
 
 * 登入Github帳號領取個人期中作業
 
@@ -79,6 +80,7 @@ Created by [40623150仝允丞]
 <section data-markdown>
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
+## Week2
 * 編輯 reveal.leo 簡報內容
 
 * 編輯 pelican.leo 網誌
