--- a/reveal/index.html
+++ b/reveal/index.html
@@ -102,7 +102,7 @@ Created by [40623150仝允丞]
 
 * 畫好草圖之後,選擇草圖面,Extrude擠出
 
-* 除料按Symmetric
+* 除料按Remove
 
 * 若要雙向擠出(除料)按Symmetric
 
@@ -160,21 +160,21 @@ Created by [40623150仝允丞]
 <section data-markdown>
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
-### 學習如何繪製時鐘
+* 人: 第九週前為個人學習 Onshape 
 
-* 繪製草圖,再做旋轉
+* 事: 除了會利用 Onshape 繪出各 Lesson 中所要求的零組件外, 也希望能用手機或電腦的英英字典網羅所需了解的單字廣泛字義。
 
-* 外圈倒圓角
+* 時: 在不同時間點, 即便個人也會需要使用分散式版次管理系統, 來提升電腦輔助設計與繪圖效益, 等到六人協同執行期末專案時, 不同組員可能在不同時間甚至不同時區參與協同, 因此對於分散式版次管理系統的依賴將會越高。
 
-* 做時鐘的底面
+    </script>
+</section>
 
-* 使用文字(text),繪製時鐘的數字
+<section data-markdown>
+    <script type="text/template">
+<!-- 請注意, @others 不可以內縮 -->
+* 地: 由於採用可攜與雲端系統, 可以降低因為不同地點電腦套件的版本、內容與設定差異所造成的輔助設計問題.
 
-* 指針部分繪製:使用平面指令,建立工作平面,再繪製草圖並擠出
-
-* 繪製轉軸:先畫好需要的草圖,再做斷面混成並用消除圓柱外多餘的材料
-
-* 繪製指針的刻度,並做環形陣列
+* 物: 主要採用可攜與雲端系統, 並且在 github classroom 中上課, 每位學員都可以彼此從網站、簡報與網誌中的內容互相觀摩學習.
 
     </script>
 </section>
